Fix scrolling behaviour

--- a/TaskTracker-IOS/Main.storyboard
+++ b/TaskTracker-IOS/Main.storyboard
@@ -6,7 +6,7 @@
     <dependencies>
         <deployment identifier="iOS"/>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="14088"/>
-        <capability neame="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
+        <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <customFonts key="customFonts">
         <array key="OpenSans-Light.ttf">
@@ -76,7 +76,7 @@
                                                 <userDefinedRuntimeAttribute type="color" keyPath="secondaryCheckmarkTintColor">
                                                     <color key="value" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                                                 </userDefinedRuntimeAttribute>
-                                                <userDefinedRuntimeAttribute type="string" keyPath="_IBCheckState" value="Checked"/>
+                                                <userDefinedRuntimeAttribute type="string" keyPath="_IBCheckState" value="unchecked"/>
                                                 <userDefinedRuntimeAttribute type="string" keyPath="_IBStateChangeAnimation" value="Fill"/>
                                                 <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
                                                     <real key="value" value="0.0"/>
